--- a/catalog.html
+++ b/catalog.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
-    <header>
+<head>
+  <meta charset="UTF-8">
+  <title>Каталог</title>
+</head>
+<body>
+  <header>
       <ul>
         <li><a href="index.html">Техномарт</a></li>
         <li><input type="search" placeholder="Поиск:" name="s"></li>
@@ -21,8 +21,9 @@
        <span>+7 (812) 555-05-55</span>
        <span> г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
       </p>
-      <button>Вход</button>
-      <button>Регистрация</button>
+      <span>Равшан Джамшутович</span>
+      <a href="#">Мои заказы</a>
+      <a href="#">Личный кабинет</a>
       <nav>
         <ul>
           <li><a href="index.html">Главная</a></li>
@@ -36,31 +37,65 @@
       </nav>
     </header>
     <main>
-      <h1>Техномарт:Товары</h1>
+      <ul>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li>Перфораторы</li>
+      </ul>
+      <h1>Перфораторы</h1>
       <section>
-        <h2>КОМПАНИЯ <<ТЕХНОМАРТ>></h2>
-        <p>
-          Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
-        </p>
-        <p>
-          Мы можем доставить ваш товар в самые отдаленные точки России!
-          Техномарт работает со многими транспортными компаниями:
-        </p>
-        <p>
-          Деловые линии<br>
-          Автотрейдинг<br>
-          ЖелДорЭкспедиция
-        </p>
-        <a href="#">Подробнее о компании</a>
+        <h2>Фильтр товаров</h2>
+
       </section>
       <section>
-        <h2>КОНТАКТЫ</h2>
-        <p>Вы можете забрать товар сами,
-           заехав в наш офис:
-        </p>
-        <img src="#" alt="адрес офиса">
-        <button> ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ</button>
+        <h2>Список товаров</h2>
+        <ul>
+          <li>
+            <h3>Перфоратор BOSCH BFG3000</h3>
+            <span><s>22500</s></span>
+            <span>15500 Р.</span>
+          </li>
+          <li>
+            <h3>Перфоратор BOSCH BFG6000</h3>
+            <span><s>30500</s></span>
+            <span>25500 Р.</span>
+          </li>
+          <li>
+            <button>КУПИТЬ</button>
+            <button>ЗАКЛАДКИ</button>
+            <h3>Перфоратор BOSCH BFG2000</h3>
+          </li>
+          <li>
+            <h3>Перфоратор BOSCH BFG3000</h3>
+            <span><s>22500</s></span>
+            <span>15500 Р.</span>
+          </li>
+          <li>
+            <h3>Перфоратор BOSCH BFG6000</h3>
+            <span><s>30500</s></span>
+            <span>25500 Р.</span>
+          </li>
+          <li>
+            <h3>Перфоратор BOSCH BFG2000</h3>
+            <span>12500 Р.</span>
+          </li>
+          <li>
+            <h3>Перфоратор BOSCH BFG3000</h3>
+            <span><s>22500</s></span>
+            <span>15500 Р.</span>
+          </li>
+          <li>
+            <h3>Перфоратор BOSCH BFG6000</h3>
+            <span><s>30500</s></span>
+            <span>25500 Р.</span>
+          </li>
+          <li>
+            <h3>Перфоратор BOSCH BFG2000</h3>
+            <span>12500 Р.</span>
+          </li>
+        </ul>
       </section>
+
     </main>
     <footer>
       <a href="index.html">Техномарт</a>
@@ -93,9 +128,7 @@
         Разработано —<br>
         <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
       </p>
-
-
     </footer>
 
-  </body>
+</body>
 </html>
