--- a/catalog.html
+++ b/catalog.html
@@ -13,28 +13,31 @@
         <li>Корзина</li>
         <li><a href="#">Оформить заказ</a></li>
       </ul>
-      <p>Интернет-магазин<br>
-        строительных материалов<br>
-        и инструментов для ремонта
-      </p>
-       <p>
-       <span>+7 (812) 555-05-55</span>
-       <span> г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
-      </p>
-      <span>Равшан Джамшутович</span>
-      <a href="#">Мои заказы</a>
-      <a href="#">Личный кабинет</a>
-      <nav>
-        <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
+      <div>
+        <p>
+          Интернет-магазин
+          строительных материалов
+          и инструментов для ремонта
+        </p>
+         <p>
+         <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+         <span> г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+        </p>
+        <span>Равшан Джамшутович</span>
+        <a href="#">Мои заказы</a>
+        <a href="#">Личный кабинет</a>
+        <nav>
+          <ul>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="#">Компания</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <ul>
@@ -52,12 +55,12 @@
         <ul>
           <li>
             <h3>Перфоратор BOSCH BFG3000</h3>
-            <span><s>22500</s></span>
+            <span>22500</span>
             <span>15500 Р.</span>
           </li>
           <li>
             <h3>Перфоратор BOSCH BFG6000</h3>
-            <span><s>30500</s></span>
+            <span>30500</span>
             <span>25500 Р.</span>
           </li>
           <li>
@@ -67,12 +70,12 @@
           </li>
           <li>
             <h3>Перфоратор BOSCH BFG3000</h3>
-            <span><s>22500</s></span>
+            <span>22500</span>
             <span>15500 Р.</span>
           </li>
           <li>
             <h3>Перфоратор BOSCH BFG6000</h3>
-            <span><s>30500</s></span>
+            <span>30500</span>
             <span>25500 Р.</span>
           </li>
           <li>
@@ -81,12 +84,12 @@
           </li>
           <li>
             <h3>Перфоратор BOSCH BFG3000</h3>
-            <span><s>22500</s></span>
+            <span>22500</span>
             <span>15500 Р.</span>
           </li>
           <li>
             <h3>Перфоратор BOSCH BFG6000</h3>
-            <span><s>30500</s></span>
+            <span>30500</span>
             <span>25500 Р.</span>
           </li>
           <li>
@@ -98,36 +101,40 @@
 
     </main>
     <footer>
-      <a href="index.html">Техномарт</a>
-      <ul>
-        <li><a href="#">Компания</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      <ul>
-        <li><a href="#">Материалы</a></li>
-        <li><a href="#">Техника</a></li>
-        <li><a href="#">Инструмент</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-      </ul>
-      <p>© 2010–2019 Компания «Техномарт»<br>
-         Все права защищены
-      </p>
-      <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
-      </ul>
-      <p>Обратная связь:<br>
-         mail@htmlacademy.ru
-      </p>
-      <p>
-        Разработано —<br>
-        <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
-      </p>
+      <div>
+        <a href="index.html">Техномарт</a>
+        <ul>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <ul>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
+      <div>
+        <p>© 2010–2019 Компания «Техномарт»
+           Все права защищены
+        </p>
+        <ul>
+          <li><a href="#">Вконтакте</a></li>
+          <li><a href="#">Фейсбук</a></li>
+          <li><a href="#">Инстаграм</a></li>
+        </ul>
+        <p>Обратная связь:
+          <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </p>
+        <p>
+          Разработано —
+          <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+        </p>
+      </div>
     </footer>
 
 </body>
