--- a/index.html
+++ b/index.html
@@ -13,27 +13,29 @@
         <li>Корзина</li>
         <li><a href="#">Оформить заказ</a></li>
       </ul>
-      <p>Интернет-магазин<br>
-        строительных материалов<br>
-        и инструментов для ремонта
-      </p>
-       <p>
-       <span>+7 (812) 555-05-55</span>
-       <span> г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
-      </p>
-      <button>Вход</button>
-      <button>Регистрация</button>
-      <nav>
-        <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
+      <div>
+        <p>Интернет-магазин
+          строительных материалов
+          и инструментов для ремонта
+        </p>
+        <p>
+         <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+         <span> г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+        </p>
+        <a href="#">Вход</a>
+        <a href="#">Регистрация</a>
+        <nav>
+          <ul>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="#">Компания</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <h1>Техномарт:Товары</h1>
@@ -47,8 +49,8 @@
           Техномарт работает со многими транспортными компаниями:
         </p>
         <p>
-          Деловые линии<br>
-          Автотрейдинг<br>
+          Деловые линии
+          Автотрейдинг
           ЖелДорЭкспедиция
         </p>
         <a href="#">Подробнее о компании</a>
@@ -58,43 +60,45 @@
         <p>Вы можете забрать товар сами,
            заехав в наш офис:
         </p>
-        <img src="#" alt="адрес офиса">
-        <button> ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ</button>
+        <a href="#"><img src="#" alt="адрес офиса"></a>
+        <a href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ</a>
       </section>
     </main>
     <footer>
-      <a href="index.html">Техномарт</a>
-      <ul>
-        <li><a href="#">Компания</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      <ul>
-        <li><a href="#">Материалы</a></li>
-        <li><a href="#">Техника</a></li>
-        <li><a href="#">Инструмент</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-      </ul>
-      <p>© 2010–2019 Компания «Техномарт»<br>
-         Все права защищены
-      </p>
-      <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
-      </ul>
-      <p>Обратная связь:<br>
-         mail@htmlacademy.ru
-      </p>
-      <p>
-        Разработано —<br>
-        <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
-      </p>
-
-
+      <div>
+        <a href="index.html">Техномарт</a>
+        <ul>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <ul>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
+      <div>
+        <p>© 2010–2019 Компания «Техномарт»
+           Все права защищены
+        </p>
+        <ul>
+          <li><a href="#">Вконтакте</a></li>
+          <li><a href="#">Фейсбук</a></li>
+          <li><a href="#">Инстаграм</a></li>
+        </ul>
+        <p>Обратная связь:
+          <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </p>
+        <p>
+          Разработано —
+          <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+        </p>
+      </div>
     </footer>
 
   </body>
