--- a/catalog.html
+++ b/catalog.html
@@ -54,51 +54,74 @@
         <h2>Список товаров</h2>
         <ul>
           <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG3000</h3>
             <span>22500</span>
             <span>15500 Р.</span>
           </li>
           <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG6000</h3>
             <span>30500</span>
             <span>25500 Р.</span>
           </li>
           <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 2000">
             <button>КУПИТЬ</button>
             <button>ЗАКЛАДКИ</button>
             <h3>Перфоратор BOSCH BFG2000</h3>
           </li>
           <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG3000</h3>
             <span>22500</span>
             <span>15500 Р.</span>
           </li>
           <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG6000</h3>
             <span>30500</span>
             <span>25500 Р.</span>
           </li>
           <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG2000</h3>
             <span>12500 Р.</span>
           </li>
           <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG3000</h3>
             <span>22500</span>
             <span>15500 Р.</span>
           </li>
           <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG6000</h3>
             <span>30500</span>
             <span>25500 Р.</span>
           </li>
           <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG2000</h3>
             <span>12500 Р.</span>
           </li>
         </ul>
       </section>
+      <ul>
+        <li>1</li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">СЛЕДУЮЩАЯ</a></li>
+      </ul>
+      <section>
+        <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+        <p>
+          Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+          Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
+          В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+        </p>
 
+      </section>
     </main>
     <footer>
       <div>
