--- a/index.html
+++ b/index.html
@@ -40,6 +40,189 @@
     <main>
       <h1>Техномарт:Товары</h1>
       <section>
+        <ul>
+          <li>
+            <h2>Материалы</h2>
+            <a href="#">НА ЛЮБОЙ ВКУС</a>
+            <img src="#">
+          </li>
+          <li>
+            <h2>Инструмент</h2>
+            <a href="#">НА ВСЕ СЛУЧАИ</a>
+            <img src="#">
+          </li>
+          <li>
+            <h2>Техника</h2>
+            <a href="#">ДЛЯ СТРОЙКИ</a>
+            <img src="#">
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <div>
+              <h2>ДРЕЛИ</h2>
+              <span>Соседям на радость!</span>
+            </div>
+            <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
+            <img src="#" alt="дрель">
+            <button><!-- листать влево --></button>
+            <button><!-- листать вправо --></button>
+          </li>
+          <li>
+            <div>
+              <h2>ПЕРФОРАТОРЫ</h2>
+              <span>Настоящие мужские игрушки</span>
+            </div>
+            <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
+            <img src="#" alt="перфоратор">
+            <button><!-- листать влево --></button>
+            <button><!-- листать вправо --></button>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <h2>Скидки 50%</h2>
+            <a href="#">НА 350 ТОВАРОВ</a>
+            <img src="#">
+          </li>
+          <li>
+            <h2>Доставка</h2>
+            <a href="#">БЕСПЛАТНО</a>
+            <img src="#">
+          </li>
+        </ul>
+      </section>
+      <div>
+        <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
+        <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
+      </div>
+      <ul>
+        <li>
+          <img src="#" alt="Перфоратор BOSCH BFG 9000">
+          <h3>Перфоратор BOSCH BFG 9000</h3>
+          <span>32500</span>
+          <span>25500 Р.</span>
+        </li>
+        <li>
+          <img src="#" alt="Перфоратор BOSCH BFG 3000">
+          <h3>Перфоратор BOSCH BFG 3000</h3>
+          <span>22500</span>
+          <span>15500 Р.</span>
+        </li>
+        <li>
+          <img src="#" alt="Перфоратор BOSCH BFG 6000">
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <span>30500</span>
+          <span>25500 Р.</span>
+        </li>
+        <li>
+          <img src="#" alt="Перфоратор BOSCH BFG 2000">
+          <h3>Перфоратор BOSCH BFG 2000</h3>
+          <span>12500 Р.</span>
+        </li>
+      </ul>
+      <div>
+        <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ:</h2>
+        <a href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
+      </div>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="#" alt="BOSCH">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="#" alt="Makita">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="" alt="DeWalt">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="#" alt="Интерскол">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="#" alt="HITACHI">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="#" alt="LG">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="#" alt="AEG">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="#" alt="metabo">
+          </a>
+        </li>
+      </ul>
+      <section>
+        <h2>СЕРВИСЫ</h2>
+        <p>
+          Хороший интернет-магазин отличается от плохого не только ценами!
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+        </p>
+        <ul>
+           <li>
+             <ul>
+               <li>
+                Доставка
+                <h2>Доставка</h2>
+                <p>Мы с удовольствием доставим ваш товар прямо<br>
+                   к вашему подъезду совершенно бесплатно!
+                   Ведь мы неплохо заработаем,<br>
+                   поднимая его на ваш этаж!
+                 </p>
+                 <img src="#" alt="грузовик">
+               </li>
+               <li>Гарантия</li>
+               <li>Кредит</li>
+             </ul>
+           </li>
+           <li>
+             <ul>
+               <li>Доставка</li>
+               <li>
+                <h2>Гарантия</h2>
+                <p>
+                   Если купленный у нас товар поломается или заискрит, <br>
+                   а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете бытьуверены в нашей гарантии. Мы обменяем сгоревший товар на новый. <br>
+                   Дом уж восстановите как-нибудь сами.
+                 </p>
+                 <img src="#" alt="100% гарантия">
+                </li>
+                <li>Кредит</li>
+             </ul>
+           </li>
+           <li>
+             <ul>
+              <li>Доставка</li>
+              <li>Гарантия</li>
+               <li>
+                 <h2>Кредит</h2>
+                  <p>
+                    Залезть в долговую яму стало проще!<br>
+                    Кредитные консультанты придут вам на помощь.
+                   </p>
+                   <a href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
+                  <img src="#" alt="деньги и документы">
+               </li>
+             </ul>
+           </li>
+         </ul>
+      </section>
+      <section>
         <h2>КОМПАНИЯ <<ТЕХНОМАРТ>></h2>
         <p>
           Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
