--- a/catalog.html
+++ b/catalog.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
@@ -7,10 +7,11 @@
 <body>
   <header>
       <ul>
-        <li><a href="index.html">Техномарт</a></li>
-        <li><input type="search" placeholder="Поиск:" name="s"></li>
-        <li>Закладки</li>
-        <li>Корзина</li>
+        <li><a href="index.html"><img src="img/logo-technomart.svg" alt="логотип"></a></li>
+        <li><img src="img/icon-search.svg" alt="поиск"><input type="search" placeholder="Поиск:" name="s">
+        </li>
+        <li><img src="img/icon-bookmark.svg" alt="закладки">Закладки:0</li>
+        <li><img src="img/icon-cart.svg">Корзина:10</li>
         <li><a href="#">Оформить заказ</a></li>
       </ul>
       <div>
@@ -20,10 +21,10 @@
           и инструментов для ремонта
         </p>
          <p>
-         <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+         <a href="tel:+7 (812) 555-05-55"><img src="img/icon-phone.svg" alt="телефон">+7 (812) 555-05-55</a>
          <span> г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </p>
-        <span>Равшан Джамшутович</span>
+        <span><img src="img/icon-user.svg" alt="иконка пользователя">Равшан Джамшутович</span>
         <a href="#">Мои заказы</a>
         <a href="#">Личный кабинет</a>
         <nav>
@@ -51,57 +52,75 @@
 
       </section>
       <section>
+        <ul>
+          <h3>Производители:</h3>
+          <li><img src="img/checkbox-on.svg" alt="флажок вкл">BOSCH</li>
+          <li><img src="img/checkbox-off.svg" alt="флажок выкл">ИНТЕРСКОЛ</li>
+          <li><img src="img/checkbox-on.svg" alt="флажок вкл">MAKITA</li>
+          <li><img src="img/checkbox-off.svg" alt="флажок выкл">DEWALT</li>
+          <li><img src="img/checkbox-off.svg" alt="флажок выкл">HITACHI</li>
+        </ul>
+        <ul>
+          <h3>Питание:</h3>
+          <li><img src="img/radio-on.svg" alt="кнопка фильтра вкл">АККУМУЛЯТОРНЫЕ</li>
+          <li><img src="img/radio-off.svg" alt="кнопка фильтра выкл">СЕТЕВЫЕ</li>
+        </ul>
+        <a href="#">Показать</a>
+      </section>
+      <section>
         <h2>Список товаров</h2>
         <ul>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/Perforator_3000.png" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG3000</h3>
             <span>22500</span>
             <span>15500 Р.</span>
           </li>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/Perforator_6000.png" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG6000</h3>
             <span>30500</span>
             <span>25500 Р.</span>
           </li>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 2000">
-            <button>КУПИТЬ</button>
+            <img src="img/Perforator_2000.png" alt="Перфоратор BOSCH BFG 2000">
+            <button><img src="img/icon-cart.svg" alt="иконка купить">КУПИТЬ</button>
             <button>ЗАКЛАДКИ</button>
+            <img src="img/new flag.png" alt="новый товар">
             <h3>Перфоратор BOSCH BFG2000</h3>
           </li>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/Perforator_3000.png" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG3000</h3>
             <span>22500</span>
             <span>15500 Р.</span>
           </li>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/Perforator_6000.png" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG6000</h3>
             <span>30500</span>
             <span>25500 Р.</span>
           </li>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/Perforator_2000.png" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG2000</h3>
             <span>12500 Р.</span>
           </li>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/Perforator_3000.png" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG3000</h3>
             <span>22500</span>
             <span>15500 Р.</span>
+            <img src="img/new flag.png" alt="новый товар">
           </li>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/Perforator_6000.png" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG6000</h3>
             <span>30500</span>
             <span>25500 Р.</span>
           </li>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/Perforator_2000.png" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG2000</h3>
             <span>12500 Р.</span>
           </li>
@@ -125,7 +144,7 @@
     </main>
     <footer>
       <div>
-        <a href="index.html">Техномарт</a>
+        <a href="index.html"><img src="img/logo-technomart.svg" alt="логотип"></a>
         <ul>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
@@ -146,9 +165,9 @@
            Все права защищены
         </p>
         <ul>
-          <li><a href="#">Вконтакте</a></li>
-          <li><a href="#">Фейсбук</a></li>
-          <li><a href="#">Инстаграм</a></li>
+          <li><a href="#"><img src="img/icon-vk.svg" alt="иконка Вконтактек">Вконтакте</a></li>
+          <li><a href="#"><img src="img/icon-fb.svg" alt="иконка фейсбук">Фейсбук</a></li>
+          <li><a href="#"><img src="img/icon-insta.svg" alt="иконка инстаграм">Инстаграм</a></li>
         </ul>
         <p>Обратная связь:
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
