--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
   <body>
     <header>
       <ul>
-        <li><a href="index.html">Техномарт</a></li>
-        <li><input type="search" placeholder="Поиск:" name="s"></li>
-        <li>Закладки</li>
-        <li>Корзина</li>
+        <li><a href="index.html"><img src="img/logo-technomart.svg" alt="логотип"></a></li>
+        <li><img src="img/icon-search.svg" alt="поиск"><input type="search" placeholder="Поиск:" name="s">
+        </li>
+        <li><img src="img/icon-bookmark.svg" alt="закладки">Закладки:0</li>
+        <li><img src="img/icon-cart.svg">Корзина:0</li>
         <li><a href="#">Оформить заказ</a></li>
       </ul>
       <div>
-        <p>Интернет-магазин
+        <p>
+          Интернет-магазин
           строительных материалов
           и инструментов для ремонта
         </p>
-        <p>
-         <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+         <p>
+         <a href="tel:+7 (812) 555-05-55"><img src="img/icon-phone.svg" alt="телефон">+7 (812) 555-05-55</a>
          <span> г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </p>
-        <a href="#">Вход</a>
+        <a href="#"><img src="img/icon-logout.svg" alt="вход">Вход</a>
         <a href="#">Регистрация</a>
         <nav>
           <ul>
@@ -63,21 +65,20 @@
               <h2>ДРЕЛИ</h2>
               <span>Соседям на радость!</span>
             </div>
-            <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
             <img src="#" alt="дрель">
-            <button><!-- листать влево --></button>
-            <button><!-- листать вправо --></button>
+            <button><</button>
+            <button>></button>
           </li>
           <li>
             <div>
               <h2>ПЕРФОРАТОРЫ</h2>
               <span>Настоящие мужские игрушки</span>
             </div>
-            <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
             <img src="#" alt="перфоратор">
-            <button><!-- листать влево --></button>
-            <button><!-- листать вправо --></button>
+            <button><</button>
+            <button>></button>
           </li>
+          <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
         </ul>
         <ul>
           <li>
@@ -243,13 +244,13 @@
         <p>Вы можете забрать товар сами,
            заехав в наш офис:
         </p>
-        <a href="#"><img src="#" alt="адрес офиса"></a>
+        <a href="#"><img src="img/map.png"  alt="адрес офиса"></a>
         <a href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ</a>
       </section>
     </main>
     <footer>
       <div>
-        <a href="index.html">Техномарт</a>
+        <a href="index.html"><img src="img/logo-technomart.svg" alt="логотип"></a>
         <ul>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
@@ -270,9 +271,9 @@
            Все права защищены
         </p>
         <ul>
-          <li><a href="#">Вконтакте</a></li>
-          <li><a href="#">Фейсбук</a></li>
-          <li><a href="#">Инстаграм</a></li>
+          <li><a href="#"><img src="img/icon-vk.svg" alt="иконка Вконтактек">Вконтакте</a></li>
+          <li><a href="#"><img src="img/icon-fb.svg" alt="иконка фейсбук">Фейсбук</a></li>
+          <li><a href="#"><img src="img/icon-insta.svg" alt="иконка инстаграм">Инстаграм</a></li>
         </ul>
         <p>Обратная связь:
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
