7. Личный проект: продолжаем подготовку графики

--- a/catalog.html
+++ b/catalog.html
@@ -64,8 +64,16 @@
           <h3>Питание:</h3>
           <li><img src="img/radio-on.svg" alt="кнопка фильтра вкл">АККУМУЛЯТОРНЫЕ</li>
           <li><img src="img/radio-off.svg" alt="кнопка фильтра выкл">СЕТЕВЫЕ</li>
+          <a href="#">Показать</a>
         </ul>
-        <a href="#">Показать</a>
+        <ul>
+          <h3>Сортировка</h3>
+          <li>по цене</li>
+          <li>по типу</li>
+          <li>по функцианалу</li>
+          <button><img src="img/icon-up-dir.svg" alt="стрелка вверх"></button>
+          <button><img src="img/icon-down-dir.svg" alt="стрелка вниз"></button>
+        </ul>
       </section>
       <section>
         <h2>Список товаров</h2>
