--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
           <li>
             <h2>Материалы</h2>
             <a href="#">НА ЛЮБОЙ ВКУС</a>
-            <img src="#">
+            <img src="img/icon-1.svg" alt="краска">
+            <img src="img/new flag.png" alt="новый товар">
           </li>
           <li>
             <h2>Инструмент</h2>
             <a href="#">НА ВСЕ СЛУЧАИ</a>
-            <img src="#">
+            <img src="img/icon-2.svg" alt="дрель">
           </li>
           <li>
             <h2>Техника</h2>
             <a href="#">ДЛЯ СТРОЙКИ</a>
-            <img src="#">
+            <img src="img/icon-3.svg" alt="трактор">
           </li>
         </ul>
         <ul>
@@ -65,7 +66,7 @@
               <h2>ДРЕЛИ</h2>
               <span>Соседям на радость!</span>
             </div>
-            <img src="#" alt="дрель">
+            <img src="img/мужик с дрелью.jpg" alt="дрель">
             <button><</button>
             <button>></button>
           </li>
@@ -74,9 +75,9 @@
               <h2>ПЕРФОРАТОРЫ</h2>
               <span>Настоящие мужские игрушки</span>
             </div>
-            <img src="#" alt="перфоратор">
-            <button><</button>
-            <button>></button>
+            <img src="img/мужик с перфоратором.jpg" alt="перфоратор">
+            <button><img src="img/icon-left.svg" alt="листать влево"></button>
+            <button><img src="img/icon-right.svg" alt="листать вправо"></button>
           </li>
           <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
         </ul>
@@ -84,12 +85,12 @@
           <li>
             <h2>Скидки 50%</h2>
             <a href="#">НА 350 ТОВАРОВ</a>
-            <img src="#">
+            <img src="img/icon-4.svg" alt="тележка">
           </li>
           <li>
             <h2>Доставка</h2>
             <a href="#">БЕСПЛАТНО</a>
-            <img src="#">
+            <img src="img/icon-5.svg" alt="машина доставки">
           </li>
         </ul>
       </section>
@@ -103,23 +104,28 @@
           <h3>Перфоратор BOSCH BFG 9000</h3>
           <span>32500</span>
           <span>25500 Р.</span>
+          <img src="img/Perforator_9000.png">
         </li>
         <li>
           <img src="#" alt="Перфоратор BOSCH BFG 3000">
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500</span>
           <span>15500 Р.</span>
+          <img src="img/Perforator_3000.png">
         </li>
         <li>
           <img src="#" alt="Перфоратор BOSCH BFG 6000">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500</span>
           <span>25500 Р.</span>
+          <img src="img/Perforator_6000.png">
         </li>
         <li>
           <img src="#" alt="Перфоратор BOSCH BFG 2000">
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <span>12500 Р.</span>
+          <img src="img/Perforator_2000.png">
+          <img src="img/new flag.png" alt="новый товар">
         </li>
       </ul>
       <div>
@@ -129,42 +135,42 @@
       <ul>
         <li>
           <a href="#">
-            <img src="#" alt="BOSCH">
+            <img src="img/bosch.png" alt="BOSCH">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="#" alt="Makita">
+            <img src="img/Makita.png" alt="Makita">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="" alt="DeWalt">
+            <img src="img/DeWALT.png" alt="DeWalt">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="#" alt="Интерскол">
+            <img src="img/Интерскол.png" alt="Интерскол">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="#" alt="HITACHI">
+            <img src="img/Hitachi.png" alt="HITACHI">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="#" alt="LG">
+            <img src="img/LG.png" alt="LG">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="#" alt="AEG">
+            <img src="img/AEG.png" alt="AEG">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="#" alt="metabo">
+            <img src="img/Metabo.png" alt="metabo">
           </a>
         </li>
       </ul>
@@ -185,7 +191,7 @@
                    Ведь мы неплохо заработаем,<br>
                    поднимая его на ваш этаж!
                  </p>
-                 <img src="#" alt="грузовик">
+                 <img src="img/грузовик достаки.png" alt="грузовик">
                </li>
                <li>Гарантия</li>
                <li>Кредит</li>
@@ -201,7 +207,7 @@
                    а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете бытьуверены в нашей гарантии. Мы обменяем сгоревший товар на новый. <br>
                    Дом уж восстановите как-нибудь сами.
                  </p>
-                 <img src="#" alt="100% гарантия">
+                 <img src="img/гарантия.png" alt="100% гарантия">
                 </li>
                 <li>Кредит</li>
              </ul>
@@ -217,7 +223,7 @@
                     Кредитные консультанты придут вам на помощь.
                    </p>
                    <a href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
-                  <img src="#" alt="деньги и документы">
+                  <img src="img/кредит.png" alt="деньги и документы">
                </li>
              </ul>
            </li>
