--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <h2>ДРЕЛИ</h2>
               <span>Соседям на радость!</span>
             </div>
-            <img src="img/мужик с дрелью.jpg" alt="дрель">
+            <img src="img/drill.jpg" alt="дрель">
             <button><</button>
             <button>></button>
           </li>
@@ -75,7 +75,7 @@
               <h2>ПЕРФОРАТОРЫ</h2>
               <span>Настоящие мужские игрушки</span>
             </div>
-            <img src="img/мужик с перфоратором.jpg" alt="перфоратор">
+            <img src="img/hammer drill.jpg" alt="перфоратор">
             <button><img src="img/icon-left.svg" alt="листать влево"></button>
             <button><img src="img/icon-right.svg" alt="листать вправо"></button>
           </li>
@@ -150,7 +150,7 @@
         </li>
         <li>
           <a href="#">
-            <img src="img/Интерскол.png" alt="Интерскол">
+            <img src="img/interskol.png" alt="Интерскол">
           </a>
         </li>
         <li>
@@ -191,7 +191,7 @@
                    Ведь мы неплохо заработаем,<br>
                    поднимая его на ваш этаж!
                  </p>
-                 <img src="img/грузовик достаки.png" alt="грузовик">
+                 <img src="img/delivery truck.png" alt="грузовик">
                </li>
                <li>Гарантия</li>
                <li>Кредит</li>
@@ -207,7 +207,7 @@
                    а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете бытьуверены в нашей гарантии. Мы обменяем сгоревший товар на новый. <br>
                    Дом уж восстановите как-нибудь сами.
                  </p>
-                 <img src="img/гарантия.png" alt="100% гарантия">
+                 <img src="img/guarantee.png" alt="100% гарантия">
                 </li>
                 <li>Кредит</li>
              </ul>
@@ -223,7 +223,7 @@
                     Кредитные консультанты придут вам на помощь.
                    </p>
                    <a href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
-                  <img src="img/кредит.png" alt="деньги и документы">
+                  <img src="img/credit.png" alt="деньги и документы">
                </li>
              </ul>
            </li>
