--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <ul>
         <li><a href="index.html"><img src="img/logo-technomart.svg" alt="логотип"></a></li>
-        <li><img src="img/icon-search.svg" alt="поиск"><input type="search" placeholder="Поиск:" name="s">
+        <li><button type="submit"><img src="img/icon-search.svg" alt="поиск"></button><input type="search" placeholder="Поиск:" name="s">
         </li>
         <li><img src="img/icon-bookmark.svg" alt="закладки"><a href="#">Закладки:0</a></li>
         <li><img src="img/icon-cart.svg"><a href="#">Корзина:0</a></li>
@@ -100,34 +100,49 @@
       </div>
       <ul>
         <li>
-          <img src="#" alt="Перфоратор BOSCH BFG 9000">
+          <img src="img/Perforator_9000.png" alt="Перфоратор BOSCH BFG 9000">
+          <a href="#"><img src="img/icon-cart.svg" alt="иконка купить">КУПИТЬ</a>
+          <button>В ЗАКЛАДКИ</button>
           <h3>Перфоратор BOSCH BFG 9000</h3>
           <span>32500</span>
           <span>25500 Р.</span>
-          <img src="img/Perforator_9000.png">
         </li>
         <li>
-          <img src="#" alt="Перфоратор BOSCH BFG 3000">
+          <img src="img/Perforator_3000.png" alt="Перфоратор BOSCH BFG 3000">
+          <a href="#"><img src="img/icon-cart.svg" alt="иконка купить">КУПИТЬ</a>
+          <button>В ЗАКЛАДКИ</button>
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500</span>
           <span>15500 Р.</span>
-          <img src="img/Perforator_3000.png">
         </li>
         <li>
-          <img src="#" alt="Перфоратор BOSCH BFG 6000">
+          <img src="img/Perforator_6000.png" alt="Перфоратор BOSCH BFG 6000">
+          <a href="#"><img src="img/icon-cart.svg" alt="иконка купить">КУПИТЬ</a>
+          <button>В ЗАКЛАДКИ</button>
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500</span>
           <span>25500 Р.</span>
-          <img src="img/Perforator_6000.png">
         </li>
         <li>
-          <img src="#" alt="Перфоратор BOSCH BFG 2000">
+          <img src="img/Perforator_2000.png" alt="Перфоратор BOSCH BFG 2000">
+          <img src="img/new flag.png" alt="новый товар">
+          <a href="#"><img src="img/icon-cart.svg" alt="иконка купить">КУПИТЬ</a>
+          <button>В ЗАКЛАДКИ</button>
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <span>12500 Р.</span>
-          <img src="img/Perforator_2000.png">
-          <img src="img/new flag.png" alt="новый товар">
         </li>
       </ul>
+      <div>
+        <div>
+          <img src="img/product-added.png" alt="Товар добавлен в корзину">
+          <span>Товар добавлен в корзину</span>
+        </div>
+        <div>
+          <a href="#">Оформить заказ</a>
+          <a href="#">Продолжить покупки</a>
+        </div>
+        <button>Закрыть</button>
+      </div>
       <div>
         <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ:</h2>
         <a href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
@@ -300,9 +315,9 @@
            Все права защищены
         </p>
         <ul>
-          <li><a href="#"><img src="img/icon-vk.svg" alt="иконка Вконтактек">Вконтакте</a></li>
-          <li><a href="#"><img src="img/icon-fb.svg" alt="иконка фейсбук">Фейсбук</a></li>
-          <li><a href="#"><img src="img/icon-insta.svg" alt="иконка инстаграм">Инстаграм</a></li>
+          <li><a href="#"><img src="img/icon-vk.svg" alt="Вконтакте"></a></li>
+          <li><a href="#"><img src="img/icon-fb.svg" alt="фейсбук"></a></li>
+          <li><a href="#"><img src="img/icon-insta.svg" alt="инстаграм"></a></li>
         </ul>
         <p>Обратная связь:
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
